# the-funnel

./: .codespellignore  .dockerignore  .gitignore  AESTHETIC_CONTRACT.md  CHANGELOG.md  Dockerfile  PLAN.md  README.md  compose.yaml  compose.yml
engine/: pyproject.toml
engine/src/funnel/: __init__.py  cancellation.py  compute_cache.py  config.py  pipeline.py
engine/src/funnel/api/: __init__.py  app.py  jobs.py  testing.py
engine/src/funnel/backtest/: __init__.py  engine.py  funnel.py  metrics.py  sweep.py  sweep_cache.py  walkforward.py
engine/src/funnel/data/: __init__.py  sources.py  universe.py
engine/src/funnel/layers/: __init__.py  combine.py  router.py  sizing.py  stack.py
engine/src/funnel/momentum/: __init__.py  cross_sectional.py
engine/src/funnel/options/: __init__.py  grid.py  overlays.py  pricing.py  sweep.py
engine/src/funnel/portfolio/: __init__.py  correlation.py
engine/src/funnel/regime/: base.py  (+7 more)
engine/tests/: conftest.py  test_api.py  test_compute_cache.py  test_cross_sectional.py  test_data.py  test_engine.py  test_fetch_threading.py  test_funnel.py  test_grid.py  test_health.py  test_indicators_vectorized_parity.py  test_jobs.py  test_label_cache.py  test_layers.py  test_lookahead.py  test_metrics.py  test_options_overlays.py  test_options_pricing.py  test_options_sweep.py  test_overlay_api.py  test_pipeline.py  test_pipeline_compute_cache.py  test_portfolio.py  test_profiles.py  test_regime.py  test_robustness_bootstrap.py  test_robustness_sensitivity.py  test_strategies.py  test_sweep.py  test_sweep_cache.py  test_walkforward.py
(+30 files in other folders)
