[project]
name = "funnel"
version = "0.1.0"
description = "The Funnel — strategy screener & backtester engine"
requires-python = ">=3.14"
dependencies = [
  "pandas",
  "numpy",
  "yfinance",
  "hmmlearn",
  "ruptures",
  "fastapi",
  "uvicorn",
  "msgspec",
  "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "ty",
  "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funnel"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
